<resources>
    <string name="app_name">MD Schedule</string>
    <string name="full_app_name">Markdown Schedule</string>
    <string name="example">Example</string>
    <string name="exampleDate">Today, Dec 31, 2000</string>

    <string name="last_updated">"Last updated "</string>
    <string name="loading">Loading…</string>
    <string name="timeTasksTitle"><u>Schedule</u></string>
    <string name="timeTasksNone">No time-sensitive tasks were found for today.
        \nRefresh or check your settings if there are tasks to be found.</string>
    <string name="nonTimeTasksTitle"><u>Tasks</u></string>
    <string name="nonTimeTasksNone">No tasks were found for today.
        \nRefresh or check your settings if there are tasks to be found.</string>
    <string name="widgetTasksNone">No tasks were found today.</string>

    <string name="action_settings">Settings</string>
    <string name="action_reload">Refresh</string>
    <string name="action_use">How to Use</string>

    <string name="settingsHeader">After changing any setting, please refresh the tasks to ensure that changes have been applied.</string>

    <string name="pathsTitle"><u>Folder Paths</u></string>
    <string name="pathsSubtitle">Add all the folders where you want to look for tasks. The search is recursive, meaning that it will look through all subfolders too.
        \n<i>Keep in mind: The more general the path is, the longer it is going to take to update</i> </string>
    <string name="pathsButton">Add Path</string>

    <string name="tasksTagTitle"><u>Tasks Tag</u></string>
    <string name="tasksTagSubtitle">Only tasks with this tag are recognized. Leave empty to recognize every checklist item.</string>
    <string name="tasksTagHint">#task</string>

    <string name="notificationsTitle"><u>Notifications</u></string>
    <string name="notificationsSubtitle">Enable to get notifications on tasks.</string>
    <string name="notificationsSubtitleNewerVersions">Enable to get notifications on tasks.
        \n<b><i>In order to get notifications on time, activate alarms and reminders.
        \nYou can find it by going to Settings>Apps>MD Schedule>Alarms &amp; reminders>Allow setting alarms and reminders.</i></b></string>

    <string name="dayPlannerNotificationsTitle"><u>Notifications for Static Tasks</u></string>
    <string name="dayPlannerNotificationsSubtitle">Enable to get notifications on tasks of the form:
        \n- 07:00 - 08:00 Get ready.</string>

    <string name="updateTimesTitle"><u>Update Times</u></string>
    <string name="updateTimesSubtitle">Tasks are going to be automatically updated every day around these times.
        You can always update them manually by clicking the refresh button.
        \n<i>Keep in mind: The updates may happen long after the scheduled time, especially if the device is idle.
            Please do not rely solely on the automatic updates; check the last updated time to make sure it has been updated.</i></string>
    <string name="updateTimesButton">Add time</string>

    <string name="inProgressTasksTitle"><u>Get \'In Progress\' Tasks</u></string>
    <string name="inProgressTasksSubtitle">Include tasks that have a start date before today and due date after.
        \nFor example, if a task\'s start date is on Monday and the due date is Friday, the task would appear all throughout the week</string>

    <string name="dayPlannerWidgetTitle"><u>Static Tasks in Widget</u></string>
    <string name="dayPlannerWidgetSubtitle">Enable to show static tasks in the widget.
        This does not affect the \'Schedule\' section inside the main app.
        \n- 07:00 - 08:00 Get ready</string>

    <string name="skipDirectoriesTitle"><u>Ignore Directories</u></string>
    <string name="skipDirectoriesSubtitle">Add all the directory names that you want to ignore when updating the tasks.
        \nCase-sensitive.</string>
    <string name="skipDirectoriesButton">Add name</string>
    <string name="skipDirectoriesHint">name</string>

    <string name="removeButtonDescription">Remove item</string>
    <string name="switchDescription">Enable/Disable Setting</string>



    <string name="useTitle"><u>How to use</u></string>
    <string name="useExplanation1">
        1. Using an external software for creating and editing Markdown files (.md) e.g. Obsidian,
        you can set tasks and events by using the following syntax:\n\n
        - All tasks and events must be in a line that starts with a Markdown checkbox \'\- [ ]\' \n
        - Start date: 🛫 2025\-12\-31\n
        - Scheduled date: ⏳ 2025\-12\-31 (If not set it will be taken as the file name if it is in the form \'YYYY\-MM\-DD.md\')\n
        - Due date: 📅 2025\-12\-31\n
        - Priority (from highest to lowest): 🔺, ⏫, 🔼, (No priority = normal), 🔽, ⏬\n
        - Status(character inside checkbox): To do [ ], Done [x], Cancelled [\-], In Progress [\/]\n
        - Optional tag to differentiate tasks that you want the program to recognize e.g. \#task or \#todo\n
        - Set an event:\n
        If enabled, a notification will be delivered on the start time of the event. Any of these is valid:\n
        \@ 9:00\n
        \@ 09:30 \- 12:00\n
        \@ 2024\-12\-31 8:45 \- 09:00\n
        For those without a date, it will use one of start date, due date, or scheduled date (the priority is in that order).\n
        - Set a static event (not compatible with the syntax specified above),
        which needs to be located inside a file with today\'s date as the title e.g. 2025\-12\-31.md:\n
        These may be inside a checkbox (\- [ ]) or a normal bullet point (\-).\n
        08:00 \- 09:00 Wake up\n\n
        Example Markdown file with the title \'2025\-12\-31.md\':
    </string>
    <string name="useExplanation2">
        2. Save the Markdown file inside a folder in the phone\'s external storage e.g. Documents\n\n
        3. Specify the folder in Settings \> Folder Paths. You can also change any of the other settings according to your preferences.\n\n
        4. Return to the main page, click the bottom button with the date and select the desired date (in this example December 31, 2025).
        You can always refresh with the upper \'Refresh\' icon or go back to today by clicking the date at the top.
        The arrows on the bottom move you one day forward or backward from the date you are currently viewing.\n\n
        5. Wait for the loading wheel to stop. If you leave the application early, it may not update correctly.\n\n
        Output from the example:
    </string>



    <string name="app_widget_description">Display your tasks for today</string>
</resources>