<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/bToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="7dp"
        android:text="@string/example"
        android:textSize="18sp"
        android:backgroundTint="@color/unchecked_card"
        android:textColor="@color/unchecked_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bToday"
        >

        <LinearLayout
            android:id="@+id/linearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="200dp"
            >

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textSize="20sp"
                android:textStyle="italic"
                android:paddingBottom="5dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tvNonTimeTasksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nonTimeTasksTitle"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNonTimeTasksNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/nonTimeTasksNone"
                android:textSize="16sp"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTaskList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:nestedScrollingEnabled="false"
                />



            <TextView
                android:id="@+id/tvTimeTasksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/timeTasksTitle"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTimeTasksNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/timeTasksNone"
                android:textSize="16sp"
                android:visibility="visible" />


            <FrameLayout
                android:id="@+id/frameTimeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHourList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />
                <include
                    layout="@layout/day_view_task_space"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/hour_number_width"
                    />
            </FrameLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:paddingHorizontal="15dp"
        android:paddingVertical="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bBackDate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unchecked_card"
            android:padding="0dp"
            android:text="◄"
            android:textColor="@color/unchecked_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/bCurrentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/unchecked_card"
            android:padding="0dp"
            android:text="@string/example"
            android:textColor="@color/unchecked_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bNextDate"
            app:layout_constraintStart_toEndOf="@+id/bBackDate"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/bNextDate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unchecked_card"
            android:padding="0dp"
            android:text="►"
            android:textColor="@color/unchecked_text"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbLoadingWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>